Fix mistake in hw 2 solution

--- a/hw2.ipynb
+++ b/hw2.ipynb
@@ -78,8 +78,7 @@
     "\n",
     "\\begin{align*}\n",
     "\\frac{1 - x}{1 + x} - \\frac{1}{3x + 1} &= \\frac{(1-x)(3x + 1) - (1 + x)}{(1 + x)(3x + 1)} \\\\\n",
-    "&= \\frac{(3x + 1 - 1)(1-x)}{(1 + x)(3x + 1)} \\\\\n",
-    "&= \\frac{3x(1-x)}{(1 + x)(3x + 1)} \\\\\n",
+    "&= \\frac{x - 3x^2}{3x^2 + 4x + 1}\n",
     "\\end{align*}"
    ]
   },
