fix typo in hw 1 (2.1.6)

--- a/hw1.ipynb
+++ b/hw1.ipynb
@@ -150,7 +150,7 @@
     "\n",
     "**Case 2.**  Suppose $\\operatorname{fl}(x) = x^+$.\n",
     "\n",
-    "Let $r$, $s$, and $m$ be as in Case 1.  But this time, note that $x_+ = r + 2^{-23}$ and $a_{24}=1$ since we rounded up.  So in particular, $x_+ - x = (r + 2^{-23} - (r + s))\\times 2^m = (2^{-23} - s)\\times 2^m$.\n",
+    "Let $r$, $s$, and $m$ be as in Case 1.  But this time, note that $x_+ = (r + 2^{-23})\\times 2^m$ and $a_{24}=1$ since we rounded up.  So in particular, $x_+ - x = (r + 2^{-23} - (r + s))\\times 2^m = (2^{-23} - s)\\times 2^m$.\n",
     "\n",
     "This gives us:\n",
     "\\begin{align*}\n",
