--- a/hw3.ipynb
+++ b/hw3.ipynb
@@ -105,10 +105,16 @@
     "\n",
     "We need at least 18 steps to obtain a relative error less than $10^{-6}$.\n",
     "\n",
-    "Now let's move to single precision floating point numbers.  Since $2\\leq r \\leq 3$, we know that $r=q\\times 2^1$ for some $q\\in[1, 2)$, and in particular, the error and relative error when approximating it using single precision is bounded by $2^{1-24}=2^{-23}$ and $2^{-24}$, respectively by the discussion on p. 44.\n",
+    "Now let's move to single precision floating point numbers.  We'd like to find the smallest $n$ for which we can guarantee that $\\frac{|r - c_n|}{r}\\leq 2^{-24}$, using inequality (6) from Section 2.1.\n",
     "\n",
-    "THINK ABOUT THIS MORE\n",
-    "\n"
+    "As above, we solve the following inequality:\n",
+    "\\begin{align*}\n",
+    "2^{-(n + 2)} &\\leq 2^{-24} \\\\\n",
+    "n + 2 &\\geq 24 \\\\\n",
+    "n &\\geq 22\n",
+    "\\end{align*}\n",
+    "\n",
+    "So we need at least 22 steps to obtain a relative error than than $2^{-24}$."
    ]
   },
   {
