--- a/divided-differences.ipynb
+++ b/divided-differences.ipynb
@@ -36,18 +36,41 @@
     "&= f[x_0,\\ldots,x_{k+1}](x_{k+1} - x_0)(x - x_1)\\cdots(x - x_k) \\\\\n",
     "f[x_0,\\ldots,x_{k+1}](x - x_1)\\cdots(x - x_k) &= \\frac{q(x) - r(x)}{x_{k+1} - x_0} \\\\\n",
     "f[x_0,\\ldots,x_{k+1}](x - x_0)\\cdots(x - x_k) &= \\frac{q(x) - r(x)}{x_{k+1} - x_0}\\cdot(x - x_0) \\\\\n",
-    "\\end{align*}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5c3baab7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "\\end{align*}\n",
     "\n",
-    "\n"
+    "By the inductive hypothesis, we know that the following polynomial interpolates $f$ through $\\{x_0,\\ldots,x_k\\}$, and by the uniqueness of interpolating polynomials, we know that it must be equal to $r$, i.e.,\n",
+    "\\begin{equation*}\n",
+    "r(x) = f[x_0] + \\cdots + f[x_0,\\ldots,x_k](x - x_0)\\cdots(x - x_{k-1})\n",
+    "\\end{equation*}\n",
+    "\n",
+    "Now let\n",
+    "$$p(x) = f(x_0) + \\cdots + f[x_0,\\ldots,x_k](x - x_0)\\cdots(x - x_{k-1}) + f[x_0,\\ldots,x_{k+1}](x - x_0)\\cdots(x - x_k)$$\n",
+    "\n",
+    "So gathering our work from above, we have\n",
+    "$$p(x) = r(x) + \\frac{q(x) - r(x)}{x_{k+1} - x_0}\\cdot(x - x_0)$$\n",
+    "\n",
+    "For any $i\\in\\{1,\\ldots,k\\}$, we know that $r(x_i) = q(x_i) = f(x_i)$, and so\n",
+    "\\begin{align*}\n",
+    "p(x_i) &= f(x_i) + \\frac{f(x_i) - f(x_i)}{x_{k+1} - x_0}(x_i - x_0)\\\\\n",
+    "&= f(x_i) + 0 \\\\\n",
+    "&= f(x_i)\n",
+    "\\end{align*}\n",
+    "\n",
+    "Also, since $r(x_0) = f(x_0)$,\n",
+    "\\begin{align*}\n",
+    "p(x_0) &= f(x_0) + \\frac{q(x_0) - f(x_0)}{x_{k+1} - x_0}\\cdot(x_0 - x_0) \\\\\n",
+    "&= f(x_0) + 0 \\\\\n",
+    "&= f(x_0)\n",
+    "\\end{align*}\n",
+    "\n",
+    "And finally, since $q(x_{k+1}) = f(x_{k+1})$,\n",
+    "\\begin{align*}\n",
+    "p(x_{k+1}) &= r(x_{k+1}) + \\frac{f(x_{k+1}) - r(x_{k+1})}{x_{k+1} - x_0}\\cdot(x_{k+1} - x_0) \\\\\n",
+    "&= r(x_{k+1}) + f(x_{k+1}) - r(x_{k+1}) \\\\\n",
+    "&= f(x_{k+1})\n",
+    "\\end{align*}\n",
+    "\n",
+    "So $p$ interpolates $f$ through $\\{x_0,\\ldots,x_{k+1}\\}$, and the result follows by induction."
    ]
   }
  ],
