more hw5 solutions

--- a/hw5.ipynb
+++ b/hw5.ipynb
@@ -109,6 +109,112 @@
     "\\left|\\frac{\\cosh x - p(x)}{\\cosh x}\\right| &\\leq \\left|\\frac{\\cosh x - p(x)}{1}\\right|\\leq 3.8\\times 10^{-16} < 5\\times 10^{-16}\n",
     "\\end{align*}\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ff51c6de",
+   "metadata": {},
+   "source": [
+    "## Section 6.2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "14248ad0",
+   "metadata": {},
+   "source": [
+    "### Section 6.1 Problem 1\n",
+    "#### Part (a)\n",
+    "First, let's form our divided difference table:\n",
+    "$$\\begin{array}{cc|c}\n",
+    "3 & 5 & \\frac{-1 - 5}{7 - 3} = -\\frac{3}{2} \\\\\n",
+    "7 & -1\n",
+    "\\end{array}$$\n",
+    "\n",
+    "Reading off the coefficients, we see that\n",
+    "$$p(x) = 5 -\\frac{3}{2}(x - 3)$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f70e2584",
+   "metadata": {},
+   "source": [
+    "### Part (b)\n",
+    "We form our divided difference table:\n",
+    "\n",
+    "$$\\begin{array}{cc|cc}\n",
+    "7 & 146 & \\frac{2 - 146}{1 - 7} = 24 & \\frac{-1 - 24}{2 - 7} = 5\\\\\n",
+    "1 & 2 & \\frac{1 - 2}{2 - 1} = -1 \\\\\n",
+    "2 & 1\n",
+    "\\end{array}$$\n",
+    "So we have\n",
+    "$$p(x) = 146 + 24(x - 7) + 5(x - 7)(x - 1)$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "845f8660",
+   "metadata": {},
+   "source": [
+    "### Part (c)\n",
+    "If we reorder our points, moving $(3,10)$ to the end, then we can re-use much of our work from Part (b).  Let's extend our table:\n",
+    "\n",
+    "$$\\begin{array}{cc|cc}\n",
+    "7 & 146 & 24 & 5 & \\frac{5 - 5}{3 - 7} = 0\\\\\n",
+    "1 & 2 & -1 & \\frac{9 - (-1)}{3 - 1} = 5\\\\\n",
+    "2 & 1 & \\frac{10 - 1}{3 - 2} = 9\\\\\n",
+    "3 & 10\n",
+    "\\end{array}$$\n",
+    "\n",
+    "It turns out that the last term vanishes, and so we still have \n",
+    "$$p(x) = 146 + 24(x - 7) + 5(x - 7)(x - 1)$$\n",
+    "\n",
+    "Alternatively, we could have observed that $p(3) = 10$ using $p$ from Part (b) to begin with and skipped computing any divided differences at all."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d26daee5",
+   "metadata": {},
+   "source": [
+    "### Proof that divided differences are independent of order\n",
+    "\n",
+    "As suggested in the hint, we first prove the following identity:\n",
+    "\n",
+    "$$f[x_0,\\ldots,x_n] = \\sum_{i=0}^n f(x_i)\\prod_{j=0,j\\neq i}^n(x_i - x_j)^{-1}$$\n",
+    "\n",
+    "We use induction on $n$.\n",
+    "\n",
+    "*Base case.*  Suppose $n = 0$.  Then $f[x_0] = f(x_0)$ by definition, and the product in the above identity is empty, so we have\n",
+    "$$\\sum_{i=0}^0 f(x_i)\\prod_{j=0,j\\neq i}^0(x_i - x_j) = f(x_0) \\cdot 1 = f(x_0)$$\n",
+    "\n",
+    "*Inductive step.*  Suppose the result holds for divided differences involving any set of $k+1$ $x_i$'s, where $k\\geq 0$.  We  have\n",
+    "\\begin{align*}\n",
+    "f[x_0,\\ldots,x_{k+1}] &= \\frac{f[x_1,\\ldots,x_{k+1}] - f[x_0,\\ldots,x_k]}{x_{k+1} - x_0} \\\\\n",
+    "&= \\frac{1}{x_{k+1} - x_0}\\left(\\sum_{i=1}^{k+1} f(x_i)\\prod_{j=1,j\\neq i}^{k+1}(x_i - x_j)^{-1} - \\sum_{i=0}^k f(x_i)\\prod_{j=0,j\\neq i}^k(x_i - x_j)^{-1}\\right),\n",
+    "\\end{align*}\n",
+    "where the second equality follows from the inductive hypothesis.  Let's separate the $i = 0$ and $i = k+1$ terms, giving us\n",
+    "$$= (x_{k+1}-x_0)^{-1}\\left(-f(x_0)\\prod_{j=1}^k(x_0 - x_j)^{-1} + \\sum_{i=1}^kf(x_i)\\left(\\prod_{j=1,j\\neq i}^{k+1}(x_i - x_j)^{-1} - \\prod_{j=0,j\\neq i}^k(x_i - x_j)^{-1}\\right) + f(x_{k+1})\\prod_{j=1}^k(x_{k+1} - x_j)^{-1}\\right)$$\n",
+    "Note that we can factor most of the factors out of the middle term, leaving us with\n",
+    "$$= (x_{k+1}-x_0)^{-1}\\left(-f(x_0)\\prod_{j=1}^k(x_0 - x_j)^{-1} + \\sum_{i=1}^kf(x_i)\\prod_{j=1,j\\neq i}^k(x_i - x_j)^{-1}\\left((x_i - x_{k+1})^{-1} - (x_i - x_0)^{-1}\\right) + f(x_{k+1})\\prod_{j=1}^k(x_{k+1} - x_j)^{-1}\\right)$$\n",
+    "\n",
+    "Let's focus for a moment on the last factor in that middle term.  Let's try and simplify it by getting a common denominator.  For a given $i$, we have\n",
+    "\\begin{align*}\n",
+    "(x_i - x_{k+1})^{-1} - (x_i - x_0)^{-1} &= \\frac{1}{x_i - x_{k+1}} - \\frac{1}{x_i - x_0} \\\\\\\n",
+    "&= \\frac{x_i - x_0 - (x_i - x_{k+1})}{(x_i - x_{k+1})(x_i - x_0)} \\\\\n",
+    "&= \\frac{x_{k+1} - x_0}{(x_i - x_{k+1})(x_i - x_0)} \\\\\n",
+    "&= (x_{k+1} - x_0)(x_i - x_0)^{-1}(x_i - x_{k+1})^{-1}\n",
+    "\\end{align*}\n",
+    "\n",
+    "Putting that back in, we see that this gives us the missing $j=0$ and $j=k+1$ terms in the middle product, leaving us with\n",
+    "$$=(x_{k+1}-x_0)^{-1}\\left(-f(x_0)\\prod_{j=1}^k(x_0 - x_j)^{-1} + \\sum_{i=1}^kf(x_i)(x_{k+1} - x_0)\\prod_{j=0,j\\neq i}^{k+1}(x_i - x_j)^{-1}+ f(x_{k+1})\\prod_{j=1}^k(x_{k+1} - x_j)^{-1}\\right)$$\n",
+    "\n",
+    "Finally, distributing out the $(x_{k+1} - x_0)^{-1}$ gives us exactly the missing values of $j$ we need for the outer terms (and changes the sign as desired on the first term), and cancels out with the unwanted $x_{k+1} - x_0$ in the middle term, leaving us with the desired result:\n",
+    "$$f[x_0,\\ldots,x_n] = \\sum_{i=0}^n f(x_i)\\prod_{j=0,j\\neq i}^n(x_i - x_j)^{-1}$$\n",
+    "\n",
+    "Finally, we observe that this representation of $f[x_0,\\ldots,x_n]$ is independent of the ordering of the $x_i$'s since addition and multiplication are both commutative."
+   ]
   }
  ],
  "metadata": {
