--- a/hw5.ipynb
+++ b/hw5.ipynb
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff51c6de",
+   "id": "cd16d8d6",
    "metadata": {},
    "source": [
     "## Section 6.2"
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14248ad0",
+   "id": "6c0d3b3f",
    "metadata": {},
    "source": [
     "### Section 6.1 Problem 1\n",
@@ -137,10 +137,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f70e2584",
+   "id": "aaa93261",
    "metadata": {},
    "source": [
-    "### Part (b)\n",
+    "#### Part (b)\n",
     "We form our divided difference table:\n",
     "\n",
     "$$\\begin{array}{cc|cc}\n",
@@ -154,11 +154,48 @@
   },
   {
    "cell_type": "markdown",
-   "id": "845f8660",
+   "id": "55237f4a",
    "metadata": {},
    "source": [
-    "### Part (c)\n",
-    "If we reorder our points, moving $(3,10)$ to the end, then we can re-use much of our work from Part (b).  Let's extend our table:\n",
+    "#### Part (e)\n",
+    "\n",
+    "Again, we compute divided differences:\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "845e0e81",
+   "metadata": {},
+   "source": [
+    "$$\\begin{array}{cc|ccccc}\n",
+    "1.5  & 0.0 & 0.0 & 0.0 & \\frac{0.04006 - 0.0}{-2.1-1.5} \\approx -0.01113 & \\frac{0.008902 - (-0.01113)}{-6.6 - 1.5}\\approx -0.002473 & \\frac{-0.0006795 - (-0.002473)}{11.0 - 1.5}\\approx 0.0001888\\\\\n",
+    "2.7  & 0.0 & 0.0 & \\frac{-0.1923 - 0.0}{-2.1-2.7} \\approx 0.04006 & \\frac{-0.04273 - 0.04006}{-6.6-2.7} \\approx 0.008902 & \\frac{0.003262 - 0.008902}{11.0 - 2.7}\\approx -0.0006795\\\\\n",
+    "3.1  & 0.0 & \\frac{1.0 - 0.0}{-2.1-3.1} \\approx -0.1923 & \\frac{0.2222-(-0.1923)}{-6.6-3.1} \\approx -0.04273 & \\frac{-0.01696 - (-0.04273)}{11.0 - 3.1} \\approx 0.003262\\\\\n",
+    "-2.1 & 1.0 & \\frac{0.0 - 1.0}{-6.6-(-2.1)} \\approx 0.2222 & \\frac{0.0 - 0.2222}{11.0-(-2.1)} \\approx -0.01696\\\\\n",
+    "-6.6 & 0.0 & 0.0 \\\\\n",
+    "11.0 & 0.0\n",
+    "\\end{array}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7d32bc02",
+   "metadata": {},
+   "source": [
+    "Putting this all together, we have\n",
+    "$$p(x) = - 0.01113(x - 1.5)(x - 2.7)(x - 3.1) -0.002473(x - 1.5)(x - 2.7)(x - 3.1)(x + 2.1) + 0.0001888(x - 1.5)(x - 2.7)(x - 3.1)(x + 2.1)(x + 6.6)$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "94bc3f18",
+   "metadata": {},
+   "source": [
+    "#### Part (c)\n",
+    "If we reorder our points from part (b), moving $(3,10)$ to the end, then we can re-use much of our work from Part (b).  Let's extend our table:\n",
     "\n",
     "$$\\begin{array}{cc|cc}\n",
     "7 & 146 & 24 & 5 & \\frac{5 - 5}{3 - 7} = 0\\\\\n",
@@ -175,7 +212,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d26daee5",
+   "id": "fffbcdb2",
    "metadata": {},
    "source": [
     "### Proof that divided differences are independent of order\n",
@@ -211,9 +248,54 @@
     "$$=(x_{k+1}-x_0)^{-1}\\left(-f(x_0)\\prod_{j=1}^k(x_0 - x_j)^{-1} + \\sum_{i=1}^kf(x_i)(x_{k+1} - x_0)\\prod_{j=0,j\\neq i}^{k+1}(x_i - x_j)^{-1}+ f(x_{k+1})\\prod_{j=1}^k(x_{k+1} - x_j)^{-1}\\right)$$\n",
     "\n",
     "Finally, distributing out the $(x_{k+1} - x_0)^{-1}$ gives us exactly the missing values of $j$ we need for the outer terms (and changes the sign as desired on the first term), and cancels out with the unwanted $x_{k+1} - x_0$ in the middle term, leaving us with the desired result:\n",
-    "$$f[x_0,\\ldots,x_n] = \\sum_{i=0}^n f(x_i)\\prod_{j=0,j\\neq i}^n(x_i - x_j)^{-1}$$\n",
+    "$$f[x_0,\\ldots,x_{k+1}] = \\sum_{i=0}^{k+1} f(x_i)\\prod_{j=0,j\\neq i}^{k+1}(x_i - x_j)^{-1}$$\n",
+    "\n",
+    "The result follows by induction.\n",
     "\n",
     "Finally, we observe that this representation of $f[x_0,\\ldots,x_n]$ is independent of the ordering of the $x_i$'s since addition and multiplication are both commutative."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b5d94bb1",
+   "metadata": {},
+   "source": [
+    "### Section 6.2 Problem 12\n",
+    "Note that $f(x) = x^m$ is a polynomial function of degree $m$.  By the uniqueness of interpolating polynomials, $f$ is its own interpolating polynomial when we have at least $m$ points, i.e., when $n\\geq m$.  In particular,\n",
+    "$$x^m = f[x_0] + f[x_0,x_1](x - x_0)\\cdots + f[x_0,\\ldots,x_n](x - x_0)\\cdots(x - x_{n-1})$$\n",
+    "\n",
+    "Distributing the last term, we see that\n",
+    "$$x^m = f[x_0,\\ldots,x_n]x^n + \\text{lower degree terms}$$\n",
+    "\n",
+    "So comparing coefficients, we see that the $f[x_0,\\ldots,x_n]$ must equal 0 if $n > m$ or 1 if $n = m$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6903c468",
+   "metadata": {},
+   "source": [
+    "### Problem 16\n",
+    "We use induction on $n$.\n",
+    "\n",
+    "*Base case.*  Suppose $n = 0$.  Then $f[x_0] = f(x_0) = \\frac{1}{x_0} = (-1)^0\\prod_{i=0}^0 x_i^{-1}$.\n",
+    "\n",
+    "*Inductive step.*  Suppose the result holds for lists of $k + 1$ $x_i$'s, and in particular,\n",
+    "\\begin{align*}\n",
+    "f[x_1,\\ldots,x_{k+1}] &= (-1)^k\\prod_{i=1}^{k+1}x_i^{-1} \\\\\n",
+    "f[x_0,\\ldots,x_k] &= (-1)^k\\prod_{i=0}^kx_i^{-1} \\\\\n",
+    "\\end{align*}\n",
+    "\n",
+    "Then\n",
+    "\\begin{align*}\n",
+    "f[x_0,\\ldots,x_{k+1}] &= \\frac{f[x_1,\\ldots,x_{k+1}] - f[x_0,\\ldots,x_k]}{x_{k+1} - x_0} \\\\\n",
+    "&= \\frac{1}{x_{k+1} - x_0}\\left( (-1)^k\\prod_{i=1}^{k+1}x_i^{-1} - (-1)^k\\prod_{i=0}^kx_i^{-1}\\right) \\\\\n",
+    "&= \\frac{(-1)^k}{x_{k+1} - x_0}\\prod_{i=1}^kx_i^{-1}\\left(x_{k+1}^{-1} - x_0^{-1}\\right) \\\\\n",
+    "&= \\frac{(-1)^k}{x_{k+1} - x_0}\\prod_{i=1}^kx_i^{-1}\\left(\\frac{1}{x_{k+1}} - \\frac{1}{x_0}\\right) \\\\\n",
+    "&= \\frac{(-1)^k}{x_{k+1} - x_0}\\prod_{i=1}^kx_i^{-1}\\cdot\\frac{x_0 - x_{k+1}}{x_0x_{k+1}} \\\\\n",
+    "&= \\frac{-(x_{k+1}-x_0)(-1)^k}{x_{k+1} - x_0}\\prod_{i=0}^{k+1}x_i^{-1}\\\\\n",
+    "&= (-1)^{k+1}\\prod_{i=0}^{k+1}x_i^{-1}\\\\\n",
+    "\\end{align*}"
    ]
   }
  ],
