--- a/hw6.ipynb
+++ b/hw6.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "02740c18",
+   "id": "25540738",
    "metadata": {},
    "source": [
     "# Homework 6\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bee1b960",
+   "id": "c98c7161",
    "metadata": {},
    "source": [
     "### Polynomial proof\n",
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fda59732",
+   "id": "9a26de2f",
    "metadata": {},
    "source": [
     "### Section 6.3 Problem 1\n",
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba98ff11",
+   "id": "c1f1caac",
    "metadata": {},
    "source": [
     "### Problem 2\n",
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d2a7fc9",
+   "id": "9081df54",
    "metadata": {},
    "source": [
     "### Problem 4\n",
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed7544c7",
+   "id": "5a58d77b",
    "metadata": {},
    "source": [
     "### Problem 5\n",
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "87361307",
+   "id": "230c2942",
    "metadata": {},
    "source": [
     "## Spline Interpolation (Section 6.4)\n",
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9fd1da6a",
+   "id": "0f6a2e1e",
    "metadata": {},
    "source": [
     "### Problem 14\n",
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d911efd",
+   "id": "14102c88",
    "metadata": {},
    "source": [
     "### Problem 17\n",
@@ -333,7 +333,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "ba7ed5cd",
+   "id": "372b9775",
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a80dfaa",
+   "id": "f68f8c02",
    "metadata": {},
    "source": [
     "So we have\n",
@@ -369,6 +369,104 @@
     "S_0(x) &= \\frac{12}{6}(x + 1)^3 -8x + 5 = 2(x + 1)^3 - 8x + 5\\\\\n",
     "S_1(x) &= -\\frac{12}{6}(x - 1)^3 + 4x + 5 = -2(x - 1)^3 + 4x + 5\n",
     "\\end{align*}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fc438166",
+   "metadata": {},
+   "source": [
+    "### Problem 18\n",
+    "First, let's check that the two components agree at the knot 0:\n",
+    "\n",
+    "\\begin{align*}\n",
+    "f(0) &= (0+1) + (0+1)^3 = 2\\text{ (from the left)} \\\\\n",
+    "f(0) &= 4 + (0 -1 ) + (0 - 1)^3 = 2 \\text{ (from the right)} \\\\\n",
+    "\\end{align*}\n",
+    "\n",
+    "Now let's check the derivatives:\n",
+    "\\begin{equation*}\n",
+    "f'(x) = \\begin{cases}\n",
+    "1 + 3(x+1)^2 &\\text{if }-1 \\leq x < 0 \\\\\n",
+    "1 + 3(x - 1)^2&\\text{if } 0 < x \\leq 1\n",
+    "\\end{cases}\n",
+    "\\end{equation*}\n",
+    "On both the left and the right, $f'(x)\\to 4$ as $x\\to 0$.  So far so good.\n",
+    "\n",
+    "Finally, let's check the second derivatives:\n",
+    "\\begin{equation*}\n",
+    "f''(x) = \\begin{cases}\n",
+    "6(x + 1) &\\text{if }-1 \\leq x < 0 \\\\\n",
+    "6(x - 1) &\\text{if }0 < x \\leq 1\n",
+    "\\end{cases}\n",
+    "\\end{equation*}\n",
+    "\n",
+    "We have $f''(-1) = f''(1) = 0$, as desired.  However, $\\lim_{x\\to 0^-}f''(x)=6$ but $\\lim_{x\\to 0^+}f''(x) = -6$.  Since the second derivatives do not agree at 0, this is **NOT** a natural cubic spline.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "608e42ee",
+   "metadata": {},
+   "source": [
+    "### Problem 19\n",
+    "Note that this problem is nearly identical to Problem 17 since the knots agree.  We only need to change the value of the spline at the knot $-1$ from 13 to 5.  After doing the same setup as before and swapping in the new value, we end up with the following linear system:\n",
+    "\\begin{equation*}\n",
+    "\\begin{pmatrix}\n",
+    "0 & -1 & 1 & 0 & 0 \\\\\n",
+    "\\frac{1}{6} & 0 & 1 & 0 & 0 \\\\\n",
+    "\\frac{1}{6} & 0 & 0 & 0 & 1 \\\\\n",
+    "0 & 0 & 0 & 1 & 1 \\\\\n",
+    "1 & 1 & 0 & -1 & 0\n",
+    "\\end{pmatrix}\n",
+    "\\begin{pmatrix} z \\\\ C_0 \\\\ D_0 \\\\ C_1 \\\\ D_1\\end{pmatrix}\n",
+    "= \\begin{pmatrix} 5 \\\\ 7 \\\\ 7 \\\\ 9 \\\\ 0\\end{pmatrix}\n",
+    "\\end{equation*}\n",
+    "\n",
+    "Solving this system in Macaulay2:\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "7901f053",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "o12 = | 0 |\n",
+      "      | 2 |\n",
+      "      | 7 |\n",
+      "      | 2 |\n",
+      "      | 7 |\n",
+      "\n",
+      "        5\n",
+      "o12 : QQ\n",
+      "\u001b[?2004h"
+     ]
+    }
+   ],
+   "source": [
+    "A = matrix {{0, -1, 1, 0, 0}, {1/6, 0, 1, 0, 0}, {1/6, 0, 0, 0, 1}, {0, 0, 0, 1, 1}, {1, 1, 0, -1, 0}}\n",
+    "b = vector(QQ^5, {5, 7, 7, 9, 0})\n",
+    "solve(A, b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "afce565d",
+   "metadata": {},
+   "source": [
+    "Consequently, our natural cubic spline is:\n",
+    "\\begin{align*}\n",
+    "S_0(x) &= \\frac{0}{6}(x + 1)^3 + 2x + 7 = 2x + 7 \\\\\n",
+    "S_1(x) &= -\\frac{0}{6}(x - 1)^3 + 2x + 7 = 2x + 7\n",
+    "\\end{align*}\n",
+    "\n",
+    "And in fact, the function we are interpolating is just the linear function $f(x) = 2x + 7$."
    ]
   }
  ],
