fix legendre/lagrange mixup

--- a/gaussian-quadrature.ipynb
+++ b/gaussian-quadrature.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a9147470",
+   "id": "6269f71e",
    "metadata": {},
    "source": [
     "# Gaussian quadrature supplemental notes\n",
     "\n",
     "Recall from class that if we integrate the linear interpolating polynomial to a function $f$ at $\\pm\\frac{1}{\\sqrt 3}$, then it's just as good as integrating a cubic interpolating polynomial thanks to the orthogonality of the Legendre polynomials.\n",
     "\n",
-    "Let's finish our computation from class.  Using the Legendre form of the interpolating polynomial, we have:\n",
+    "Let's finish our computation from class.  Using the Lagrange form of the interpolating polynomial, we have:\n",
     "\n",
     "\\begin{align*}\n",
     "p(x) &= f\\left(-\\frac{1}{\\sqrt 3}\\right)\\frac{x - \\frac{1}{\\sqrt 3}}{-\\frac{1}{\\sqrt 3} - \\frac{1}{\\sqrt 3}} + f\\left(\\frac{1}{\\sqrt 3}\\right)\\frac{x + \\frac{1}{\\sqrt 3}}{\\frac{1}{\\sqrt 3} + \\frac{1}{\\sqrt 3}} \\\\\n",
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9cae4a62",
+   "id": "b5394428",
    "metadata": {},
    "source": [
     "## Method of undetermined coefficients\n",
@@ -62,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "cb36a822",
+   "id": "50645fb7",
    "metadata": {
     "scrolled": true
    },
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8bef9b61",
+   "id": "d085ab3a",
    "metadata": {},
    "source": [
     "This agrees with our much uglier computation above.\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c793618d",
+   "id": "94597672",
    "metadata": {},
    "source": [
     "Now let's write a function to estimate an integral with this 2-point Gaussian quadrature formula."
@@ -108,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "d6d63b32",
+   "id": "7237b70d",
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b33b7e7",
+   "id": "50f1d4a4",
    "metadata": {},
    "source": [
     "We know that $\\displaystyle{\\int_{-1}^1\\cos x\\,dx = \\sin 1 - \\sin(-1)}$, so let's see how we did:"
@@ -138,7 +138,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "47c48876",
+   "id": "cd288825",
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6a486b0",
+   "id": "b7cc2181",
    "metadata": {},
    "source": [
     "Not bad for only two points!"
